tests/regression/errors/basic/syntax_error_21.csd
// Syntax error test 21 - missing semicolon
sus x drip = 21
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
